<resources>
    <string name="app_name">pavel-shumilin-shop</string>
    <string name="checkoutHeader">Оформление заказа</string>
    <string name="checkoutMiddleName">Отчество</string>
    <string name="checkoutClientDataTitle">Данные</string>
    <string name="checkoutCartTitle">Корзина</string>
    <string name="checkoutProductsText">Товары</string>
    <string name="checkoutSaleText">Скидка</string>
    <string name="checkoutFinalPriceText">Итоговая цена</string>
    <string name="checkoutSurname">Фамилия</string>
    <string name="checkoutName">Имя</string>
    <string name="checkoutPhone">Телефон: 8(+7)**********</string>
    <string name="checkoutConfirm">Подтвердить</string>
    <string name="cartHeader">Корзина</string>
    <string name="cartCheckoutBtn">Оформление заказа</string>
    <string name="catalogHeader">Каталог</string>
    <string name="catalogCartBtn">Корзина</string>
    <string name="detailedProductHeader">Детали продукта</string>
    <string name="detailed_photo_title">detailed photo</string>
    <string name="some_text">someText</string>
    <string name="price">Цена</string>
    <string name="catalogCartButton">Корзина</string>
    <string name="paymentType">Способ оплаты</string>
    <string name="cashPaymentType">Наличными при получении</string>
    <string name="cardPaymentType">Картой при получении</string>
    <string name="addToCart">Добавить в корзину</string>
    <string name="cart">Cart</string>
</resources>
